[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/fonts/question_text.tres" type="DynamicFont" id=1]
[ext_resource path="res://resources/fonts/chocolate_big.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/others/answer_box.gd" type="Script" id=3]
[ext_resource path="res://resources/fonts/chocolate_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://resources/box.png" type="Texture" id=5]

[node name="AnswerBox" type="NinePatchRect"]
self_modulate = Color( 1, 0.862745, 0.862745, 1 )
anchor_right = 0.390625
anchor_bottom = 0.333333
rect_min_size = Vector2( 400, 200 )
texture = ExtResource( 5 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labText" type="Label" parent="."]
anchor_left = 0.0325
anchor_top = 0.065
anchor_right = 0.97
anchor_bottom = 0.925
margin_top = -1.90735e-06
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Dolorem sit amet Dolorem sit amet Dolorem sit amet "
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="labSure" type="Label" parent="."]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -131.0
margin_top = -54.0
margin_right = -5.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Sure?"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="labGood" type="Label" parent="."]
visible = false
modulate = Color( 0.176471, 0.729412, 0, 1 )
anchor_left = -0.0344325
anchor_top = -0.006218
anchor_right = -0.0344325
anchor_bottom = -0.00621803
margin_left = -59.5956
margin_top = -1.90735e-06
margin_right = 110.404
margin_bottom = 93.0
rect_rotation = -11.164
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "V"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="labBad" type="Label" parent="."]
visible = false
modulate = Color( 1, 0, 0, 1 )
anchor_left = -0.0264866
anchor_top = -0.011516
anchor_right = -0.0264866
anchor_bottom = -0.011516
margin_left = -60.6548
margin_top = -1.90735e-06
margin_right = 109.345
margin_bottom = 93.0
rect_rotation = -11.164
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "X"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": true
}
